Add "journal" to source code link too

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-    Source code available upon <a href="https://github.com/christianbundy/christianbundy.github.io/blob/master/_posts/{{ page.date | date: "%Y-%m-%d" }}.md">HTTP request</a>.
+    Source code available upon <a href="https://github.com/christianbundy/christianbundy.github.io/blob/master/_posts/{{ page.date | date: "%Y-%m-%d" }}-journal.md">HTTP request</a>.
   </div>
 
   {% include disqus.html %}
